# RomanoRenderXPU

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  imgui.ini  setup_environment.bat  setup_environment.sh  vcpkg.json
cmake/: target_options.cmake
dependencies/: CMakeLists.txt
dependencies/glfw/include/GL/: glext.h
dependencies/glfw/lib-linux/: glfw3Targets-none.cmake  glfw3Targets.cmake  libGLEW.so.2.2.0
dependencies/glfw/lib-vc2019-x64/: freeglut.lib
dependencies/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp
include/romanorender/: app.h  app_icons.h  app_widgets.h  bbox.h  bvh.h  camera.h  color.h  cudaVector.h  cuda_utils.h  cuda_vector.h  decl.h  geometry.h  glutils.h  integrator.h  light.h  light_type.h  mat44.h  maths.h  object.h  object_algos.h  optix_params.h  optix_utils.h  property.h  random.h  ray.h  renderbuffer.h  renderengine.h  rendergraph.h  romanorender.h  sampling.h  scene.h  scenegraph.h  tbvh.h  vec2.h  vec3.h  vec4.h
res/: imgui.ini
src/: CMakeLists.txt  app.cpp  app.h  app_widgets.cpp  bbox.cpp  bluenoise.h  boundingbox.cpp  boundingbox.h  bvh.cpp  bvh.h  camera.cpp  camera.h  cuda_utils.cpp  decl.h  flythrough_camera.h  geometry.cpp  imgui.ini  integrator.cpp  light.cpp  main.cpp  mat44.cpp  mat44.h  material.cpp  material.h  maths.h  object.cpp  object_algos.cpp  optix_utils.cpp  random.cpp  ray.h  render.cpp  render.h  renderbuffer.cpp  renderengine.cpp  rendergraph.cpp  sampling.cpp  sampling.h  scene.cpp  scenegraph.cpp  scenegraph_nodes.cpp  (+6 more)
src/ispc/: CMakeLists.txt  image_process.h  image_process.ispc  intersectors  intersectors.asm  intersectors.h  intersectors.ispc  rand.h  rand.ispc
src/nodes/: CMakeLists.txt  merge.cpp  sphere.cpp
src/shaders/: defines.cuh  float2.cuh  float3.cuh  float4.cuh  mat44.cuh  math.cuh  payload.cuh  random.cuh  sampling.cuh  shaders.cu  uint2.cuh  uint3.cuh  uint4.cuh
tests/: CMakeLists.txt  test_bvh_many_points.cpp  test_bvh_single_prim.cpp  test_mat44.cpp  test_renderbuffer.cpp  test_rendereengine_cube.cpp  test_renderengine_abc.cpp  test_renderengine_auto_instancing_cpu.cpp  test_renderengine_auto_instancing_gpu.cpp  test_renderengine_cornell_cpu.cpp  test_renderengine_cornell_gpu.cpp  test_renderengine_cube.cpp  test_renderengine_instancing_cpu.cpp  test_renderengine_instancing_gpu.cpp  test_renderengine_objs.cpp  test_renderengine_scene.cpp  test_renderengine_scenegraph.cpp  test_renderengine_scenegraph_cpu.cpp  test_renderengine_scenegraph_gpu.cpp  test_sampling.cpp  test_scene.cpp  test_scene_occlude.cpp
tests_data/: cornell_box_shaderball.abc  imgui.ini
